# ComfyUI-FFmpeg

./: .gitignore  AGENTS.md  JULES_SETUP_README.md  Project_index.md  README.md  README_CN.md  README_EN.md  SETUP_README.md  __init__.py  api_routes.py  benchmark.py  benchmark_extensions.py  benchmark_video2frames.py  environment_setup.sh  func.py  jules_setup_template.sh  nodes_map.py  pyproject.toml  requirements-test.txt  roadmap.md  workflow_v3_example.json
example_workflows/: legacy_workflow.json
nodes/: LosslessCut.py  LosslessCut_v3.py  addAudio.py  addAudioLegacy.py  addAudio_v3.py  addImgWatermark.py  addImgWatermark_v3.py  addTextWatermark.py  addTextWatermark_v3.py  audioFilter.py  audioFilter_v3.py  encodeWithHWAccel_v3.py  extractAudio.py  extractAudio_v3.py  filtergraph.py  filtergraph_v3.py  frameInterpolate_v3.py  frames2video.py  frames2video_v3.py  genericFFmpeg.py  genericFFmpeg_v3.py  imageCopy.py  imagePath2Tensor.py  imagesSave.py  imagesSave_v3.py  imagesTensorToVideo_v3.py  keyframeAwareCutting.py  keyframeAwareCutting_v3.py  loadImageFromDir.py  loadImageFromDir_v3.py  losslessRemux.py  losslessRemux_v3.py  losslesscut.py  mergingVideoByPlenty.py  mergingVideoByPlenty_v3.py  mergingVideoByTwo.py  mergingVideoByTwo_v3.py  multiCuttingVideo.py  multiCuttingVideo_v3.py  pipVideo.py  (+26 more)
scripts/: generate_v3_workflow.py  jules_environment_setup.sh
tests/: TESTING.md  conftest.py  debug_import_v3.py  debug_nodes_map.py  pytest.ini  run_tests.py  test_file_helpers.py  test_func.py  test_integration_nodes.py  test_lossless_cut.py  test_nodes.py
(+46 files in other folders)
